--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore all files without an extension
+*
+!*.*
+
 # Temporary files
 .DS_Store
 *.fbin
@@ -59,6 +63,9 @@ target/
 # Fortran module files
 *.mod
 *.smod
+
+# Allow golang go.mod
+!go.mod
 
 # Compiled Static libraries
 *.lai
