Add static library build command

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,5 +1,6 @@
 CXX = g++
 CC = gcc
+AR = ar
 
 C_CXX_FLAGS := -pedantic -Wall -Wextra -Wno-conversion -Wno-unknown-pragmas
 C_CXX_DEBUG_FLAGS := $(C_CXX_FLAGS)
@@ -18,10 +19,12 @@ HEADER_INCLUDES = -I.  -I ../include/  -I ../fp16/include/ -I ../robin-map/inclu
 
 .PHONY: build
 build:
-	$(CXX) $(OPTS) $(C_CXX_FLAGS) $(CXX_FLAGS) -o libusearch.so lib.cpp $(HEADER_INCLUDES) -shared -fPIC
+	$(CXX) $(OPTS) $(C_CXX_FLAGS) $(CXX_FLAGS) -o lib.o -c lib.cpp $(HEADER_INCLUDES) -shared -fPIC
+	$(CXX) $(OPTS) $(C_CXX_FLAGS) $(CXX_FLAGS) -o libusearch.so lib.o $(HEADER_INCLUDES) -shared -fPIC
+	$(AR) -rcv libusearch.a lib.o
 
 debug:
-	$(CXX) $(OPTS) $(C_CXX_DEBUG_FLAGS) $(CXX_FLAGS) -o libusearch.so lib.cpp $(HEADER_INCLUDES) -shared -fPIC
+	$(CXX) $(OPTS) $(C_CXX_DEBUG_FLAGS) $(CXX_FLAGS) -o libusearch.so -c lib.cpp $(HEADER_INCLUDES) -shared -fPIC
 
 .PHONY: static
 static:
@@ -30,3 +33,7 @@ static:
 .PHONY: test
 test:
 	$(CC) $(OPTS) -D_GNU_SOURCE $(C_CXX_DEBUG_FLAGS) $(CX_FLAGS) test.c external_retreival_testutils.c -L. -lusearch -Wl,-rpath,. -o test
+
+.PHONY: clean
+clean:
+	rm -f *.o *.so *.a test
