--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-
+project(usearch_c C CXX)
 # this already exists in the root CMakeLists.txt
 # it is duplicated here to make sure users do not get a warning if
 # they directly include usearch/c/CMakeLists.txt instead of the top level usearch/CMakelists.txt
@@ -10,9 +10,8 @@ endif ()
 
 option(USEARCH_USE_SIMSIMD "Use SimSIMD hardware-accelerated metrics" OFF)
 option(USEARCH_LOOKUP_LABEL "Support containment and lookup queries over labels" ON)
-option(USEARCH_NO_MARCH_NATIVE "Skip -march-native flat in compilation" OFF)
-option(USEARCH_BUILD_LIBUSEARCH_STATIC "Build a static libusearch_c library" ON)
-option(USEARCH_BUILD_LIBUSEARCH_SHARED "Build a shated libusearch_c library " OFF)
+option(USEARCH_NO_MARCH_NATIVE "Skip -march-native flag in compilation" OFF)
+option(USEARCH_BUILD_STATIC "Build a static libusearch_c library (builds shared, when OFF)" ON)
 option(USEARCH_BUILD_TEST "Build a test executable" ON)
 option(USEARCH_DEBUG_BUILD_ASAN "Build with address sanitizer" ON)
 
@@ -63,35 +62,33 @@ set(USEARCH_PUNNED_INCLUDE_DIRS
 
 # This article discusses a better way to allow building either static or shared libraries
 # https://alexreinking.com/blog/building-a-dual-shared-and-static-library-with-cmake.html
-if(${USEARCH_BUILD_LIBUSEARCH_STATIC} OR ${USEARCH_BUILD_LIBUSEARCH_SHARED})
-    if (${USEARCH_BUILD_LIBUSEARCH_STATIC})
-        set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -static-libstdc++")
-        add_library(usearch_c STATIC lib.cpp)
-    elseif (${USEARCH_BUILD_LIBUSEARCH_SHARED})
-        add_library(usearch_c SHARED lib.cpp)
-    endif()
+if (${USEARCH_BUILD_STATIC})
+    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -static-libstdc++")
+    add_library(usearch_c STATIC lib.cpp)
+else ()
+    add_library(usearch_c SHARED lib.cpp)
+endif()
 
-    set_target_properties(usearch_c PROPERTIES POSITION_INDEPENDENT_CODE ON)
+set_target_properties(usearch_c PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
-    target_include_directories(usearch_c PRIVATE ${USEARCH_PUNNED_INCLUDE_DIRS})
-    set_target_properties(usearch_c PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-    set_target_properties(usearch_c PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-    set_target_properties(usearch_c PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})    
+target_include_directories(usearch_c PRIVATE ${USEARCH_PUNNED_INCLUDE_DIRS})
+set_target_properties(usearch_c PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set_target_properties(usearch_c PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set_target_properties(usearch_c PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
 
-    target_include_directories(usearch_c PRIVATE ${USEARCH_PUNNED_INCLUDE_DIRS})
+target_include_directories(usearch_c PRIVATE ${USEARCH_PUNNED_INCLUDE_DIRS})
 
-    if(${USEARCH_DEBUG_BUILD_ASAN})
-        # for asan in debug builds
-        target_link_libraries(usearch_c PRIVATE gcov)
-    endif()
+if(${USEARCH_DEBUG_BUILD_ASAN})
+    # for asan in debug builds
+    target_link_libraries(usearch_c PRIVATE gcov)
+endif()
 
-    if(${USEARCH_USE_SIMSIMD})
-        target_compile_definitions(usearch_c PRIVATE USEARCH_USE_SIMSIMD=1)
-    endif()
-    if (${USEARCH_LOOKUP_LABEL})
-        target_compile_definitions(usearch_c PRIVATE USEARCH_LOOKUP_LABEL=1)
-    endif()
+if(${USEARCH_USE_SIMSIMD})
+    target_compile_definitions(usearch_c PRIVATE USEARCH_USE_SIMSIMD=1)
+endif()
+if (${USEARCH_LOOKUP_LABEL})
+    target_compile_definitions(usearch_c PRIVATE USEARCH_LOOKUP_LABEL=1)
 endif()
 
 if(${USEARCH_BUILD_TEST})
