Feature/narek performance (#7)
* Use appropriate expantion_search and expantion_add values

* Avoid allocating locks and managing concurrency when they are not used

Usearch allocates a bitmap for fine-grained node locking.
In LanternDB, we lock pages at DB-page granularity so locking at usearch
level does not give additional protection.

Allocating for this locks on index creation is still a source of
overhead, however, and this PR adds a knob to disable that

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -10,6 +10,7 @@ endif ()
 
 option(USEARCH_USE_SIMSIMD "Use SimSIMD hardware-accelerated metrics" OFF)
 option(USEARCH_LOOKUP_LABEL "Support containment and lookup queries over labels" ON)
+option(USEARCH_CONCURRENT "Assume usearch is used from multiple threads and lock appropriately" ON)
 option(USEARCH_NO_MARCH_NATIVE "Skip -march-native flag in compilation" OFF)
 option(USEARCH_BUILD_STATIC "Build a static libusearch_c library (builds shared, when OFF)" ON)
 option(USEARCH_BUILD_TEST "Build a test executable" ON)
@@ -89,6 +90,9 @@ if(${USEARCH_USE_SIMSIMD})
 endif()
 if (${USEARCH_LOOKUP_LABEL})
     target_compile_definitions(usearch_c PRIVATE USEARCH_LOOKUP_LABEL=1)
+endif()
+if (${USEARCH_CONCURRENT})
+    target_compile_definitions(usearch_c PRIVATE USEARCH_CONCURRENT=1)
 endif()
 
 if(${USEARCH_BUILD_TEST})
